--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "body-parser": "^1.20.1",
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-session": "^1.17.3",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -27,10 +32,11 @@
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.1",
-    "sharp": "^0.31.1"
+    "sharp": "^0.31.1",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.5.1"
+    "sequelize-cli": "^6.5.2"
   },
   "engines": {
     "node": "16.15.1"
