--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-async-errors": "^3.1.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "got": "^12.5.3",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
