--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "migrate": "npx sequelize-cli db:migrate",
+    "create": "sequelize migration:create --name",
     "seed": "npx sequelize-cli db:seed:all",
     "down": "npx sequelize-cli db:migrate:undo",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,10 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "csurf": "^1.11.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -36,7 +39,7 @@
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.1",
-    "sharp": "^0.31.1",
+    "sharp": "^0.31.3",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
