--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.1",
     "sharp": "^0.31.3",
+    "uuid": "^9.0.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
